--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,52 @@
-name: 'tehuelche-pr-size-labeler'
+name: 'Pull Request size labeler'
 description: 'Label a PR based on the amount of changes'
 inputs:
   GITHUB_TOKEN:
     description: 'GitHub token'
     required: true
+  xs_max_size:
+    description: 'Max size for a PR to be considered xs'
+    required: false
+    default: '10'
+  s_max_size:
+    description: 'Max size for a PR to be considered s'
+    required: false
+    default: '100'
+  m_max_size:
+    description: 'Max size for a PR to be considered m'
+    required: false
+    default: '500'
+  l_max_size:
+    description: 'Max size for a PR to be considered l'
+    required: false
+    default: '1000'
+  fail_if_xl:
+    description: 'Report GitHub Workflow failure if the PR size is xl allowing to forbid PR merge'
+    required: false
+    default: 'false'
+  message_if_xl:
+    description: 'Message to show if the PR size is xl'
+    required: false
+    default: >
+      'This PR exceeds the recommended size of 1000 lines.
+      Please make sure you are NOT addressing multiple issues with one PR.
+      Note this PR might be rejected due to its size.’
+  github_api_url:
+    description: 'URI to the API of your Github Server, only necessary for Github Enterprise customers'
+    required: false
+    default: 'api.github.com'
 runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
     - ${{ inputs.GITHUB_TOKEN }}
+    - ${{ inputs.xs_max_size }}
+    - ${{ inputs.s_max_size }}
+    - ${{ inputs.m_max_size }}
+    - ${{ inputs.l_max_size }}
+    - ${{ inputs.fail_if_xl }}
+    - ${{ inputs.message_if_xl }}
+    - ${{ inputs.github_api_url }}
+branding:
+  icon: 'tag'
+  color: 'green'
